--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,16 @@
 	<uses-permission android:name="android.vending.BILLING" />
   	<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 	<application android:label="Mindway" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
-		<activity android:name="com.ryanheise.audioservice.AudioServiceActivity" android:exported="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
+		<activity 
+			android:name="com.ryanheise.audioservice.AudioServiceActivity" 
+			android:exported="true" 
+			android:launchMode="singleTop" 
+			android:theme="@style/LaunchTheme" 
+			android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+			android:hardwareAccelerated="true" 
+			android:showWhenLocked="true"
+    		android:turnScreenOn="true"
+			android:windowSoftInputMode="adjustResize">
 			<!--
 			Specifies an Android theme to apply to this Activity as soon as
 			the Android process has started. This theme is visible to the user
