--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -87,6 +87,8 @@ dependencies:
   flutter_native_splash: ^2.2.10
   chewie: ^1.5.0
   purchases_flutter: ^5.5.0
+  flutter_local_notifications: ^15.1.0+1
+  timezone: ^0.9.2
 
 flutter_native_splash:
   color: "#ebe134"
