--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.0.2+3
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -90,6 +90,7 @@ dependencies:
   flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
   http: ^0.13.6
+  expandable: ^5.0.1
 
 flutter_native_splash:
   color: "#ebe134"
