--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   timezone: ^0.9.2
   http: ^0.13.6
   expandable: ^5.0.1
+  flutter_animate: ^4.2.0+1
 
 flutter_native_splash:
   color: "#ebe134"
