--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   http: ^0.13.6
   expandable: ^5.0.1
   flutter_animate: ^4.2.0+1
+  provider: ^6.0.5
 
 flutter_native_splash:
   color: "#ebe134"
