--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ dependencies:
   expandable: ^5.0.1
   flutter_animate: ^4.2.0+1
   provider: ^6.0.5
+  workmanager: ^0.5.1
 
 flutter_native_splash:
   color: "#ebe134"
