--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.vending.BILLING" />
   	<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<application android:label="Mindway" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
 		<activity 
 			android:name="com.ryanheise.audioservice.AudioServiceActivity" 
