--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 	<uses-permission android:name="android.vending.BILLING" />
   	<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+	<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+	<uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 	<application android:label="Mindway" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
 		<activity 
 			android:name="com.ryanheise.audioservice.AudioServiceActivity" 
